# ai-agent-skills

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/conventions/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/start/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml
docs/: 2026-05-16-PRD-issue-33-security-remediation.md
skills/agent-os-assist/: LICENSE  SKILL.md
skills/agent-os-assist/.workspace/: EVAL-REPORT.md  README.md  run-trigger-eval.sh
skills/agent-os-assist/references/: commands.md  file-structure.md  getting-started.md  installation.md  standards-vs-skills.md
skills/agent-os-profile-critique/: README.md  SKILL.md
skills/agent-os-profile-critique/.workspace/: EVAL-REPORT.md  run-trigger-eval.sh  summarize_eval.py
skills/agent-os-profile-critique/references/: file-structure.md  profiles.md  review-checklists.md  standards.md  v2-vs-v3.md
skills/agentic-skeleton-dir-structure/: SKILL.md
skills/arch-lens/: SKILL.md
skills/arch-lens/references/: DETECTION-PATTERNS.md  (+3 more)
skills/create-a-skill/: NOTICE  README.md  SKILL.md
skills/design-critique/: SKILL.md
skills/git-commit-pr-message/: SKILL.md
skills/handoff/: SKILL.md
skills/readme-writer/: SKILL.md
skills/readme-writer/.workspace/projects/data-lens/: pyproject.toml
skills/review-api-design/: .skillignore  SKILL.md
skills/vault-scribe/: SKILL.md
(+73 files in other folders)
